@@ -20,12 +20,11 @@ select STDOUT; $| = 1;
 eval { require Cache::Memcached; };
 plan(skip_all => 'Cache::Memcached not installed') if $@;
 
-my $t = Test::Nginx->new()->has('rewrite')->has_daemon('memcached')->plan(16)
+my $t = Test::Nginx->new()->has('rewrite')->has_daemon('memcached')->plan(17)
 	->write_file_expand('nginx.conf', <<'EOF');
 
 %%TEST_GLOBALS%%
 
-master_process off;
 daemon         off;
 
 events {
@@ -201,5 +200,9 @@ http_get('/memd4');
 is($memd1->stats()->{total}->{total_connections} +
 	$memd2->stats()->{total}->{total_connections}, $total + 2,
 	'connection per backend');
+
+$t->stop();
+
+like(`grep -F '[alert]' ${\($t->testdir())}/error.log`, qr/^$/s, 'no alerts');
 
 ###############################################################################
